# chaos-md

./: .gitignore  01-cpu-load.sh  02-mem-load.sh  03-disk-fail.sh  04-net-delay.sh  05-net-loss.sh  06-net-drop.sh  07-net-bw.sh  08-proc-freeze.sh  09-proc-kill.sh  10-rolling-upgrade.sh  11-dc-drop.sh  12-server-stop.sh  Makefile  README.md  all-forwards.sh  build.sh  chaos-md.sh  env.example.sh  prepare-hosts.sh  reset-tc-qdisc.sh  rolling-restart.sh  run-all.sh  set-net-delay.sh  setup-blade.sh  switch-config.sh  sync-to-remote.sh
chaos-md/: Cargo.toml  README.md  launcher.sh
chaos-md/src/: ansi.rs  app.rs  catalog.rs  main.rs  queue.rs  runner.rs  state.rs  theme.rs  watcher.rs
chaos-md/src/ui/: clock.rs  config_dialog.rs  dialog.rs  log.rs  mod.rs  progress.rs  remaining_time.rs  selector.rs  status.rs  timeline.rs
docs/: 01-cpu-load.md  02-mem-load.md  03-disk-fail.md  04-net-delay.md  05-net-loss.md  06-net-drop.md  07-net-bw.md  08-proc-freeze.md  09-proc-kill.md  10-rolling-upgrade.md  11-dc-drop.md  12-server-stop.md  README.md
grafana/: 01-victoria.sh  02-node-exporter.sh  03-grafana.sh  04-dashboards-provision.sh  README.md  URLS.md  annotate.sh  build-chaos-dashboards.py  check-victoria.sh  deploy-dashboard.sh  install.sh  scrape.yml
lib/: blade_install.sh  cli.sh  grafana.sh  hosts.sh  init.sh  log.sh  net.sh  ports.sh  ssh.sh  term.sh  test_runner.sh  timeline.sh  util.sh
nemesis/: blade.sh  disk.sh  iptables.sh  proc.sh  systemd.sh  tc.sh
workload/: README.md  deploy.sh  env.example.sh  workload.sh
workload/lib/: log.sh  stats.sh  vm.sh  (+1 more)
(+29 files in other folders)
