[package]
name = "chaos-md"
version = "0.4.2"
edition = "2021"
description = "Chaos MD TUI for distributed chaos testing"
authors = ["Evgeny Varnakov"]
publish = false

[dependencies]
ratatui     = "0.29"
crossterm   = { version = "0.28", features = ["event-stream"] }
tokio       = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util", "signal"] }
portable-pty = "0.8"
ansi-to-tui = "7"
notify      = "6"
clap        = { version = "4", features = ["derive"] }
anyhow      = "1"
chrono      = "0.4"
futures     = "0.3"
ratatui-braille-bar = "0.2.2"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
